# 0ad-switch

./: .gitignore  README.md  build.sh
0ad-src/: .editorconfig  .gitattributes  .gitignore  .groovylintrc.json  .lfsconfig  .pre-commit-config.yaml  .shellcheckrc  .yamllint.yaml  LICENSE.md  README.md  eslint.config.mjs  license_dbghelp.txt  package.json  ruff.toml
0ad-src/.gitea/: CODEOWNERS
0ad-src/.gitea/ISSUE_TEMPLATE/: config.yaml  defect.yaml  enhancement.yaml  release-process.md
0ad-src/.gitea/workflows/: checkrefs.yml  lint.yml  pre-commit.yml
0ad-src/binaries/logs/: readme.txt
0ad-src/binaries/system/: get-nightly-binaries.bat  readme.txt
0ad-src/docs/: README.md  timing_pitfalls.tex
0ad-src/docs/doxygen/: CMakeLists.txt  mainpage.dox  style.css
0ad-src/libraries/: LICENSE.txt  build-macos-libs.sh  build-source-libs.sh  clean-source-libs.sh  get-windows-libs.bat
0ad-src/libraries/macos-patches/: 04-fix-duplicate-symbols.patch
0ad-src/source/: CxxTestRunner.tpl  main.cpp  test_setup.cpp
0ad-src/source/collada/: CommonConvert.cpp  CommonConvert.h  DLL.cpp  Decompose.cpp  GeomReindex.cpp  Maths.cpp  PMDConvert.cpp  PSAConvert.cpp  StdSkeletons.cpp  StdSkeletons.h  XMLFix.cpp  XMLFix.h  precompiled.h
0ad-src/source/dapinterface/: DapInterface.cpp  DapInterface.h
0ad-src/source/graphics/: Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  Canvas2D.cpp  Canvas2D.h  CinemaManager.cpp  ColladaManager.cpp  ColladaManager.h  Color.cpp  Color.h  Decal.cpp  Decal.h  Entity.h  Font.cpp  Font.h  FontManager.cpp  FontManager.h  FontMetrics.cpp  FontMetrics.h  GameView.cpp  GameView.h  HFTracer.cpp  HFTracer.h  HeightMipmap.cpp  HeightMipmap.h  ICameraController.cpp  ICameraController.h  LOSTexture.cpp  LOSTexture.h  LightEnv.cpp  LightEnv.h  MapGenerator.cpp  MapGenerator.h  MapIO.cpp  MapIO.h  MapReader.cpp  MapReader.h  MapWriter.cpp  MapWriter.h  (+73 more)
0ad-src/source/gui/: CGUI.cpp  CGUI.h  CGUIScrollBarHorizontal.cpp  CGUIScrollBarHorizontal.h  CGUIScrollBarVertical.cpp  CGUIScrollBarVertical.h  CGUISetting.cpp  CGUISetting.h  CGUISprite.cpp  CGUISprite.h  CGUIText.cpp  CGUIText.h  GUIManager.cpp  GUIManager.h  GUIObjectEventBroadcaster.h  GUIObjectTypes.cpp  GUIRenderer.cpp  GUIRenderer.h  GUIStringConversions.cpp  GUITooltip.cpp  GUITooltip.h  IGUIScrollBar.cpp  IGUIScrollBar.h  SGUIIcon.h  SGUIMessage.h  SGUIStyle.h
0ad-src/source/i18n/: L10n.cpp  L10n.h
0ad-src/source/lib/: alignment.h  app_hooks.cpp  app_hooks.h  bits.cpp  bits.h  build_version.cpp  build_version.h  byte_order.cpp  byte_order.h  code_annotation.h  code_generation.h  config.h  config2.h  debug.cpp  debug.h  debug_stl.cpp  debug_stl.h  fnv_hash.h  frequency_filter.cpp  frequency_filter.h  hash.h  input.cpp  input.h  lib.cpp  lib.h  module_init.cpp  module_init.h  ogl.cpp  ogl.h  os_path.h  (+15 more)
glprobe/source/: main.cpp
installer/: Makefile
installer/source/: main.c
(+1088 files in other folders)
